--- a/javaScript_II/aula_11_conversor_de_moedas/style.css
+++ b/javaScript_II/aula_11_conversor_de_moedas/style.css
@@ -94,7 +94,7 @@ section {
     font-weight: 400;
 }
 
-.currency-value {
+.currency-value, .currency-value-to-convert {
     color: #555555;
     font-size: 20px;
     font-weight: 700;
